tests/snapshots/test_runner__tests__compiler__typecheck__invalid_function_arguments_length.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
export let foo = (i: Integer): Integer => 2

do 2.foo(3).print()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/invalid_function_arguments_length.kk:3:6
  │
3 │ do 2.foo(3).print()
  │      ^^^ Function arguments length mismatch
  │
  = Expected 1 argument only, but 2 arguments are provided.
